--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 pyperclip==1.8.2
 xlrd==2.0.1
 pyautogui==0.9.50
-opencv-python==4.7.0.68
+psutil==5.9.4
+pillow==9.4.0
+rich==13.3.1
+pywin32==305
+pytesseract==0.3.10
