--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pyperclip==1.8.2
-pyautogui==0.9.50
+Pillow==9.4.0
+Pillow==9.5.0
 psutil==5.9.4
-pillow==9.4.0
+PyAutoGUI==0.9.50
+pyperclip==1.8.2
 pywin32==305
-ttkbootstrap~=1.10.1
-uiautomation~=2.0.17
+uiautomation==2.0.17
+xlrd==2.0.1
